Fix var init / name.

--- a/app/Resources/views/course/edit_activities_course_info_tab.html.twig
+++ b/app/Resources/views/course/edit_activities_course_info_tab.html.twig
@@ -145,8 +145,8 @@
          */
         var sectionsCollectionHolder = $('#sections'),
             collapsiblesShowState = {},
-            sortingInProgress = false;
-            collapsibleItem = null,
+            sortingInProgress = false,
+            $collapsibleItem = null,
             ckeInstance = null;
         sectionsCollectionHolder.data('index', sectionsCollectionHolder.find('li.section').length);
         sectionsCollectionHolder.sortable( {
