--- a/app/Resources/assets/scss/app.scss
+++ b/app/Resources/assets/scss/app.scss
@@ -170,6 +170,7 @@ form ul.list-group {
     & > h4 .fas {
         float: right;
         margin-left: .3rem;
+        color: $secondary;
         cursor: pointer;
     }
 }
