Better control on FA icons color (using BS standard classes).

--- a/app/Resources/assets/scss/_custom.scss
+++ b/app/Resources/assets/scss/_custom.scss
@@ -100,6 +100,39 @@ $input-disabled-bg: $gray-100;
 
 
 /*
+    Font Awesome icons colors.
+*/
+
+.fas {
+
+    &.danger {
+        color: $danger;
+    }
+
+    &.info {
+        color: $info;
+    }
+
+    &.primary {
+        color: $primary;
+    }
+
+    &.secondary {
+        color: $secondary;
+    }
+
+    &.success {
+        color: $success;
+    }
+
+    &.warning {
+        color: $warning;
+    }
+}
+
+
+
+/*
     Bootstrap-toggle
 */
 
