--- a/app/Resources/views/course/edit_activities_course_info_tab.html.twig
+++ b/app/Resources/views/course/edit_activities_course_info_tab.html.twig
@@ -11,8 +11,8 @@
 
     <h4>
         Sections et activités
-        <span title="Tout replier."><i class="fas fa-folder"></i></span>
-        <span title="Tout déplier."><i class="fas fa-folder-open"></i></span>
+        <span title="Tout replier."><i class="fas fa-folder secondary"></i></span>
+        <span title="Tout déplier."><i class="fas fa-folder-open secondary"></i></span>
     </h4>
 
     {{ form_start(form) }}
