--- a/app/Resources/views/course/edit_presentation_course_tab.html.twig
+++ b/app/Resources/views/course/edit_presentation_course_tab.html.twig
@@ -78,38 +78,20 @@
             </ul>
             <div class="tab-content border p-2">
                 <div class="{{ imageContentClasses }}" id="media_image_container" role="tabpanel">
-                    <div class="row">
-                        <div class="col">
-                            {{ form_errors(form.image) }}
-                            {{ form_widget(form.image) }}
-                        </div>
-                    </div>
-                    <div class="row mt-2">
-                        <div class="col">
-                            {% set imgSrc = '' %}
-                            {% if form.vars.data.image is not null %}
-                                {% set imgSrc = asset('data/' ~ form.vars.data.image.filename) %}
-                            {% endif %}
-                            <img class="img-thumbnail" id="media_image" src="{{ imgSrc }}">
-                        </div>
-                    </div>
+                    {{ form_errors(form.image) }}
+                    {{ form_widget(form.image) }}
+                    {% set imgSrc = '' %}
+                    {% if form.vars.data.image is not null %}
+                        {% set imgSrc = asset('data/' ~ form.vars.data.image.filename) %}
+                    {% endif %}
+                    <img class="img-thumbnail" id="media_image" src="{{ imgSrc }}">
                 </div>
                 <div class="{{ videoContentClasses }}" id="media_video_container" role="tabpanel">
-                    <div class="row">
-                        <div class="col">
-                            {{ form_widget(form.video) }}
-                            <label alt="URL" placeholder="URL"></label>
-                        </div>
-                        <div class="col-md-auto">
-                            <button id="media_video_preview" class="btn btn-primary btn-sm" type="button">Prévisualiser</button>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col">
-                            <div class="embed-responsive embed-responsive-16by9">
-                                <iframe id="media_video_iframe" class="embed-responsive-item" src="{{ form.vars.value.video }}"></iframe>
-                            </div>
-                        </div>
+                    {{ form_widget(form.video) }}
+                    <label alt="URL" placeholder="URL"></label>
+                    <button id="media_video_preview" class="btn btn-secondary btn-sm btn-block" type="button">Prévisualiser</button>
+                    <div class="embed-responsive embed-responsive-16by9">
+                        <iframe id="media_video_iframe" class="embed-responsive-item" src="{{ form.vars.value.video }}"></iframe>
                     </div>
                 </div>
             </div>
