--- a/app/Resources/views/course/edit_course_info_panel.html.twig
+++ b/app/Resources/views/course/edit_course_info_panel.html.twig
@@ -40,45 +40,45 @@
                 Etat
             </dt>
             <dd>
-                {% set  badgePresentationTabClass = 'danger' %}
+                {% set badgePresentationTabClass = 'danger' %}
                 {% if courseInfo.isTemPresentationTabValid %}
-                    {% set  badgePresentationTabClass = 'success' %}
+                    {% set badgePresentationTabClass = 'success' %}
                 {% endif %}
                 <span class="mx-1 badge badge-{{ badgePresentationTabClass }}">Présentation générale</span>
 
-                {% set  badgeActivitiesTabClass = 'danger' %}
+                {% set badgeActivitiesTabClass = 'danger' %}
                 {% if courseInfo.isTemActivitiesTabValid %}
-                    {% set  badgeActivitiesTabClass = 'success' %}
+                    {% set badgeActivitiesTabClass = 'success' %}
                 {% endif %}
                 <span class="mx-1 badge badge-{{ badgeActivitiesTabClass }}">Contenu et activités</span>
 
-                {% set  badgeObjectivesTabClass = 'danger' %}
+                {% set badgeObjectivesTabClass = 'danger' %}
                 {% if courseInfo.isTemObjectivesTabValid %}
-                    {% set  badgeObjectivesTabClass = 'success' %}
+                    {% set badgeObjectivesTabClass = 'success' %}
                 {% endif %}
                 <span class="mx-1 badge badge-{{ badgeObjectivesTabClass }}">Objectifs</span>
 
-                {% set  badgeMccTabClass = 'danger' %}
+                {% set badgeMccTabClass = 'danger' %}
                 {% if courseInfo.isTemMccTabValid %}
-                    {% set  badgeMccTabClass = 'success' %}
+                    {% set badgeMccTabClass = 'success' %}
                 {% endif %}
                 <span class="mx-1 badge badge-{{ badgeMccTabClass }}">Modalités d'évaluation</span>
 
-                {% set  badgeEquipmentsTabClass = 'danger' %}
+                {% set badgeEquipmentsTabClass = 'danger' %}
                 {% if courseInfo.isTemEquipmentsTabValid %}
-                    {% set  badgeEquipmentsTabClass = 'success' %}
+                    {% set badgeEquipmentsTabClass = 'success' %}
                 {% endif %}
                 <span class="mx-1 badge badge-{{ badgeEquipmentsTabClass }}">Matériel et ressources</span>
 
-                {% set  badgeInfosTabClass = 'danger' %}
+                {% set badgeInfosTabClass = 'danger' %}
                 {% if courseInfo.isTemInfosTabValid %}
-                    {% set  badgeInfosTabClass = 'success' %}
+                    {% set badgeInfosTabClass = 'success' %}
                 {% endif %}
                 <span class="mx-1 badge badge-{{ badgeInfosTabClass }}">Informations pratiques</span>
 
-                {% set  badgeClosingRemarksTabClass = 'danger' %}
+                {% set badgeClosingRemarksTabClass = 'danger' %}
                 {% if courseInfo.isTemClosingRemarksTabValid %}
-                    {% set  badgeClosingRemarksTabClass = 'success' %}
+                    {% set badgeClosingRemarksTabClass = 'success' %}
                 {% endif %}
                 <span class="mx-1 badge badge-{{ badgeClosingRemarksTabClass }}">Mot de la fin</span>
             </dd>
@@ -87,11 +87,10 @@
 </div>
 <div class="row mt-3">
     <div class="col">
-        <button class="btn btn-outline-primary btn-block shadow" type="button" id="publishButton"
-                {% if not courseInfoHelper.canBePublished(courseInfo) %}
-                    disabled
-                {% endif %}
-        >
+        <button class="btn btn-outline-primary btn-block shadow"
+                type="button"
+                id="publishButton"
+                {% if not courseInfoHelper.canBePublished(courseInfo) %} disabled {% endif %}>
             <i class="fas fa-eye"></i>
             Publier
         </button>
