--- a/app/Resources/views/form/teachers_field.html.twig
+++ b/app/Resources/views/form/teachers_field.html.twig
@@ -12,7 +12,7 @@
                 {{ form_widget(teacher.completeName) }}
             </div>
             <div class="col-md-auto pl-0">
-                <i class="fas fa-trash-alt teacher-collection-remove" title="Retirer de la liste."></i>
+                <i class="fas fa-trash-alt danger teacher-collection-remove" title="Retirer de la liste."></i>
             </div>
         </div>
         {{ form_widget(teacher) }}
