--- a/app/Resources/views/form/activities_field.html.twig
+++ b/app/Resources/views/form/activities_field.html.twig
@@ -35,7 +35,7 @@
                     </small>
                 </div>
                 <div class="col-md-auto pl-0">
-                    <i class="fas fa-trash-alt activity-collection-remove" title="Retirer de la liste."></i>
+                    <i class="fas fa-trash-alt danger activity-collection-remove" title="Retirer de la liste."></i>
                 </div>
                 <div class="col-md-auto pl-0">
                     <i class="fas fa-arrows-alt activity-collection-move" title="Glisser / déposer pour modifier l'ordre."></i>
