--- a/app/Resources/views/form/prerequisites_field.html.twig
+++ b/app/Resources/views/form/prerequisites_field.html.twig
@@ -6,7 +6,7 @@
                 <label alt="Préciser" placeholder="Préciser"></label>
             </div>
             <div class="col-md-auto pl-0">
-                <i class="fas fa-trash-alt prerequisite-collection-remove" title="Retirer de la liste."></i>
+                <i class="fas fa-trash-alt danger prerequisite-collection-remove" title="Retirer de la liste."></i>
             </div>
             <div class="col-md-auto pl-0">
                 <i class="fas fa-arrows-alt prerequisite-collection-move" title="Glisser / déposer pour modifier l'ordre."></i>
