--- a/app/Resources/views/form/sections_field.html.twig
+++ b/app/Resources/views/form/sections_field.html.twig
@@ -14,7 +14,7 @@
                 <label alt="Titre" placeholder="Titre"></label>
             </div>
             <div class="col-md-auto pl-0">
-                <i class="fas fa-trash-alt section-collection-remove" title="Retirer de la liste."></i>
+                <i class="fas fa-trash-alt danger section-collection-remove" title="Retirer de la liste."></i>
             </div>
             <div class="col-md-auto pl-0">
                 <i class="fas fa-arrows-alt section-collection-move" title="Glisser / déposer pour modifier l'ordre."></i>
