--- a/app/Resources/views/form/equipments_field.html.twig
+++ b/app/Resources/views/form/equipments_field.html.twig
@@ -21,7 +21,7 @@
             <div class="row">
                 <div class="col-10 pr-1">
                     {{ form_widget(equipment.description) }}
-                    <label alt="Préciser si nécessaire" placeholder="Préciser"></label>
+                    <label alt="Préciser si nécessaire" placeholder="Préciser si nécessaire"></label>
                 </div>
             </div>
             {{ form_widget(equipment.equipment) }}
