Input “label” placeholder fix.

--- a/app/Resources/views/course/edit_presentation_course_tab.html.twig
+++ b/app/Resources/views/course/edit_presentation_course_tab.html.twig
@@ -21,13 +21,13 @@
             <div class="row">
                 <div class="col">
                     {{ form_widget(form.period) }}
-                    <label alt="Période (facultatif)" placeholder="Période (facultatif)"></label>
+                    <label placeholder="Période (facultatif)"></label>
                 </div>
             </div>
             <div class="row">
                 <div class="col">
                     {{ form_widget(form.domain) }}
-                    <label alt="Domaine *" placeholder="Domaine *"></label>
+                    <label placeholder="Domaine *"></label>
                 </div>
             </div>
         </div>
@@ -112,7 +112,7 @@
                 </div>
                 <div class="col-4">
                     {{ form_widget(form.teacherSource) }}
-                    <label alt="Source" placeholder="Source"></label>
+                    <label placeholder="Source"></label>
                 </div>
             </div>
             <div class="row">
@@ -145,29 +145,29 @@
                             <div class="row">
                                 <div class="col-md-auto">
                                     {{ form_widget(form.teachingCmClass) }}
-                                    <label alt="Heures CM" placeholder="Heures TP"></label>
+                                    <label placeholder="Heures CM"></label>
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="col-md-auto">
                                     {{ form_widget(form.teachingTdClass) }}
-                                    <label alt="Heures TP" placeholder="Heures TD"></label>
+                                    <label placeholder="Heures TD"></label>
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="col-md-auto">
                                     {{ form_widget(form.teachingTpClass) }}
-                                    <label alt="Heures TP" placeholder="Heures TP"></label>
+                                    <label placeholder="Heures TP"></label>
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="col pr-1">
                                     {{ form_widget(form.teachingOtherClass) }}
-                                    <label alt="Heures autre" placeholder="Heures autre"></label>
+                                    <label placeholder="Heures autre"></label>
                                 </div>
                                 <div class="col pl-1">
                                     {{ form_widget(form.teachingOtherTypeClass) }}
-                                    <label alt="Type" placeholder="Type"></label>
+                                    <label placeholder="Type"></label>
                                 </div>
                             </div>
                         </div>
@@ -193,29 +193,29 @@
                             <div class="row">
                                 <div class="col-md-auto">
                                     {{ form_widget(form.teachingCmHybridClass) }}
-                                    <label alt="Heures CM" placeholder="Heures CM"></label>
+                                    <label placeholder="Heures CM"></label>
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="col-md-auto">
                                     {{ form_widget(form.teachingTdHybridClass) }}
-                                    <label alt="Heures TD" placeholder="Heures TD"></label>
+                                    <label placeholder="Heures TD"></label>
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="col-md-auto">
                                     {{ form_widget(form.teachingTpHybridClass) }}
-                                    <label alt="Heures TP" placeholder="Heures TP"></label>
+                                    <label placeholder="Heures TP"></label>
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="col pr-1">
                                     {{ form_widget(form.teachingOtherHybridClass) }}
-                                    <label alt="Heures autre" placeholder="Heures autre"></label>
+                                    <label placeholder="Heures autre"></label>
                                 </div>
                                 <div class="col pl-1">
                                     {{ form_widget(form.teachingOtherTypeHybridClass) }}
-                                    <label alt="Type" placeholder="Type"></label>
+                                    <label placeholder="Type"></label>
                                 </div>
                             </div>
                         </div>
@@ -223,23 +223,23 @@
                             <div class="row">
                                 <div class="col-md-auto">
                                     {{ form_widget(form.teachingCmHybridDist) }}
-                                    <label alt="Heures autre" placeholder="Heures CM"></label>
+                                    <label placeholder="Heures CM"></label>
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="col-md-auto">
                                     {{ form_widget(form.teachingTdHybridDist) }}
-                                    <label alt="Heures autre" placeholder="Heures TD"></label>
+                                    <label placeholder="Heures TD"></label>
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="col pr-1">
                                     {{ form_widget(form.teachingOtherHybridDist) }}
-                                    <label alt="Heures autre" placeholder="Heures autre"></label>
+                                    <label placeholder="Heures autre"></label>
                                 </div>
                                 <div class="col pl-1">
                                     {{ form_widget(form.teachingOtherTypeHybridDistant) }}
-                                    <label alt="Type" placeholder="Type"></label>
+                                    <label placeholder="Type"></label>
                                 </div>
                             </div>
                         </div>
