--- a/app/Resources/views/course/edit_presentation_course_tab.html.twig
+++ b/app/Resources/views/course/edit_presentation_course_tab.html.twig
@@ -19,9 +19,9 @@
     <div class="row mt-3">
         <div class="col">
             {{ form_widget(form.period) }}
-            <label alt="Période (facultatif)" placeholder="Période (facultatif)"></label>
+            <label placeholder="Période (facultatif)"></label>
             {{ form_widget(form.domain) }}
-            <label alt="Domaine *" placeholder="Domaine *"></label>
+            <label placeholder="Domaine *"></label>
         </div>
         <div class="col">
             <h6>
@@ -104,7 +104,7 @@
                 </div>
                 <div class="col-4">
                     {{ form_widget(form.teacherSource) }}
-                    <label alt="Source" placeholder="Source"></label>
+                    <label placeholder="Source"></label>
                 </div>
             </div>
             <div class="row">
@@ -137,29 +137,29 @@
                             <div class="row">
                                 <div class="col-md-auto">
                                     {{ form_widget(form.teachingCmClass) }}
-                                    <label alt="Heures CM" placeholder="Heures TP"></label>
+                                    <label placeholder="Heures CM"></label>
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="col-md-auto">
                                     {{ form_widget(form.teachingTdClass) }}
-                                    <label alt="Heures TP" placeholder="Heures TD"></label>
+                                    <label placeholder="Heures TD"></label>
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="col-md-auto">
                                     {{ form_widget(form.teachingTpClass) }}
-                                    <label alt="Heures TP" placeholder="Heures TP"></label>
+                                    <label placeholder="Heures TP"></label>
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="col pr-1">
                                     {{ form_widget(form.teachingOtherClass) }}
-                                    <label alt="Heures autre" placeholder="Heures autre"></label>
+                                    <label placeholder="Heures autre"></label>
                                 </div>
                                 <div class="col pl-1">
                                     {{ form_widget(form.teachingOtherTypeClass) }}
-                                    <label alt="Type" placeholder="Type"></label>
+                                    <label placeholder="Type"></label>
                                 </div>
                             </div>
                         </div>
@@ -185,29 +185,29 @@
                             <div class="row">
                                 <div class="col-md-auto">
                                     {{ form_widget(form.teachingCmHybridClass) }}
-                                    <label alt="Heures CM" placeholder="Heures CM"></label>
+                                    <label placeholder="Heures CM"></label>
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="col-md-auto">
                                     {{ form_widget(form.teachingTdHybridClass) }}
-                                    <label alt="Heures TD" placeholder="Heures TD"></label>
+                                    <label placeholder="Heures TD"></label>
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="col-md-auto">
                                     {{ form_widget(form.teachingTpHybridClass) }}
-                                    <label alt="Heures TP" placeholder="Heures TP"></label>
+                                    <label placeholder="Heures TP"></label>
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="col pr-1">
                                     {{ form_widget(form.teachingOtherHybridClass) }}
-                                    <label alt="Heures autre" placeholder="Heures autre"></label>
+                                    <label placeholder="Heures autre"></label>
                                 </div>
                                 <div class="col pl-1">
                                     {{ form_widget(form.teachingOtherTypeHybridClass) }}
-                                    <label alt="Type" placeholder="Type"></label>
+                                    <label placeholder="Type"></label>
                                 </div>
                             </div>
                         </div>
@@ -215,23 +215,23 @@
                             <div class="row">
                                 <div class="col-md-auto">
                                     {{ form_widget(form.teachingCmHybridDist) }}
-                                    <label alt="Heures autre" placeholder="Heures CM"></label>
+                                    <label placeholder="Heures CM"></label>
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="col-md-auto">
                                     {{ form_widget(form.teachingTdHybridDist) }}
-                                    <label alt="Heures autre" placeholder="Heures TD"></label>
+                                    <label placeholder="Heures TD"></label>
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="col pr-1">
                                     {{ form_widget(form.teachingOtherHybridDist) }}
-                                    <label alt="Heures autre" placeholder="Heures autre"></label>
+                                    <label placeholder="Heures autre"></label>
                                 </div>
                                 <div class="col pl-1">
                                     {{ form_widget(form.teachingOtherTypeHybridDistant) }}
-                                    <label alt="Type" placeholder="Type"></label>
+                                    <label placeholder="Type"></label>
                                 </div>
                             </div>
                         </div>
