Input “label” unused attribute removal.

--- a/app/Resources/views/course/edit_closing_remarks_course_info_tab.html.twig
+++ b/app/Resources/views/course/edit_closing_remarks_course_info_tab.html.twig
@@ -16,7 +16,7 @@
             <div class="row">
                 <div class="col">
                     {{ form_widget(form.closingVideo) }}
-                    <label alt="URL" placeholder="URL"></label>
+                    <label placeholder="URL"></label>
                 </div>
                 <div class="col-md-auto">
                     <button id="media_closing_video_preview" class="btn btn-primary btn-sm" type="button">Prévisualiser</button>
