--- a/app/Resources/views/course/edit_presentation_course_tab.html.twig
+++ b/app/Resources/views/course/edit_presentation_course_tab.html.twig
@@ -88,7 +88,7 @@
                 </div>
                 <div class="{{ videoContentClasses }}" id="media_video_container" role="tabpanel">
                     {{ form_widget(form.video) }}
-                    <label alt="URL" placeholder="URL"></label>
+                    <label placeholder="URL"></label>
                     <button id="media_video_preview" class="btn btn-secondary btn-sm btn-block" type="button">Prévisualiser</button>
                     <div class="embed-responsive embed-responsive-16by9">
                         <iframe id="media_video_iframe" class="embed-responsive-item" src="{{ form.vars.value.video }}"></iframe>
