--- a/app/Resources/views/form/activities_field.html.twig
+++ b/app/Resources/views/form/activities_field.html.twig
@@ -46,7 +46,7 @@
             <div class="row">
                 <div class="col">
                     {{ form_widget(activity.description) }}
-                    <label alt="Préciser si nécessaire" placeholder="Préciser si nécessaire"></label>
+                    <label placeholder="Préciser si nécessaire"></label>
                 </div>
             </div>
             <div class="row evaluation-info">
@@ -65,7 +65,7 @@
                 </div>
                 <div class="col align-self-center">
                     {{ form_widget(activity.evaluationRate) }}
-                    <label alt="%" placeholder="%"></label>
+                    <label placeholder="%"></label>
                 </div>
             </div>
             {{ form_widget(activity.activity) }}
