--- a/app/Resources/views/form/sections_field.html.twig
+++ b/app/Resources/views/form/sections_field.html.twig
@@ -11,7 +11,7 @@
             </div>
             <div class="col">
                 {{ form_widget(section.title) }}
-                <label alt="Titre" placeholder="Titre"></label>
+                <label placeholder="Titre"></label>
             </div>
             <div class="col-md-auto pl-0">
                 <i class="fas fa-trash-alt danger section-collection-remove" title="Retirer de la liste."></i>
