--- a/app/Resources/views/form/tutoring_resources_field.html.twig
+++ b/app/Resources/views/form/tutoring_resources_field.html.twig
@@ -3,7 +3,7 @@
         <div class="row">
             <div class="col">
                 {{ form_widget(tutoringResource.description) }}
-                <label alt="Préciser" placeholder="Préciser"></label>
+                <label placeholder="Préciser"></label>
             </div>
             <div class="col-md-auto pl-0">
                 <i class="fas fa-trash-alt danger tutoringResource-collection-remove" title="Retirer de la liste."></i>
