--- a/app/Resources/views/course/view_student.html.twig
+++ b/app/Resources/views/course/view_student.html.twig
@@ -157,6 +157,7 @@
     if ( mediaFrame ) {
         mediaFrame.removeAttribute( 'width' );
         mediaFrame.removeAttribute( 'height' );
+        mediaFrame.removeAttribute( 'allow' );
         mediaFrame.setAttribute( 'style', "padding:0;margin:0;border:0" );
         mediaFrame.classList.add( 'embed-responsive-item' );
     }
