Removing iframe eventual deprecated attributes.

--- a/app/Resources/views/course/view_student.html.twig
+++ b/app/Resources/views/course/view_student.html.twig
@@ -158,6 +158,12 @@
         mediaFrame.removeAttribute( 'width' );
         mediaFrame.removeAttribute( 'height' );
         mediaFrame.removeAttribute( 'allow' );
+        mediaFrame.removeAttribute( 'align' );
+        mediaFrame.removeAttribute( 'frameborder' );
+        mediaFrame.removeAttribute( 'longdesc' );
+        mediaFrame.removeAttribute( 'marginheight' );
+        mediaFrame.removeAttribute( 'marginwidth' );
+        mediaFrame.removeAttribute( 'scrolling' );
         mediaFrame.setAttribute( 'style', "padding:0;margin:0;border:0" );
         mediaFrame.classList.add( 'embed-responsive-item' );
     }
