--- a/app/Resources/views/course/view_student.html.twig
+++ b/app/Resources/views/course/view_student.html.twig
@@ -164,6 +164,7 @@
         mediaFrame.removeAttribute( 'marginheight' );
         mediaFrame.removeAttribute( 'marginwidth' );
         mediaFrame.removeAttribute( 'scrolling' );
+        mediaFrame.removeAttribute( 'mozbrowser' );
         mediaFrame.setAttribute( 'style', "padding:0;margin:0;border:0" );
         mediaFrame.classList.add( 'embed-responsive-item' );
     }
