Section / activity / eval. removal confirmation.

--- a/app/Resources/views/course/edit_activities_course_info_tab.html.twig
+++ b/app/Resources/views/course/edit_activities_course_info_tab.html.twig
@@ -64,10 +64,8 @@
 
 {% block javascripts %}
     <script>
+        var $listElementToRemove;
 
-        /**
-         *
-         */
         function setActivityInfos(el, data){
             el.find('.activity-label').html(data['label']);
             el.find('select[id$=_activity]').val(data['activity_id']);
@@ -135,9 +133,10 @@
 
             // Remove an activity from collection
             activitiesCollectionHolder.on('click', '.activity-collection-remove', function(){
-                if(confirm("Êtes-vous sûr(e) de vouloir supprimer cette activité ?")) {
-                    Syllabus.removeListElement($(this).closest('.activity'));
-                }
+                $listElementToRemove = $(this).closest('.activity');
+                bootbox.confirm("Confirmez-vous la suppression de cette activité ?", function(result){
+                    Syllabus.removeListElement($listElementToRemove);
+                })
             });
         }
 
@@ -224,9 +223,10 @@
          * Remove a section from collection
          */
         sectionsCollectionHolder.on('click', '.section-collection-remove', function() {
-            if(confirm("Êtes-vous sûr(e) de vouloir supprimer cette section ?")) {
-                Syllabus.removeListElement($(this).closest('li.section'));
-            }
+            $listElementToRemove = $(this).closest('li.section');
+            bootbox.confirm("Confirmez-vous la suppression de cette section ?", function(result){
+                Syllabus.removeListElement($listElementToRemove);
+            })
         });
 
         /**
@@ -280,9 +280,10 @@
          * Remove a evaluation from collection
          */
         evaluationsCollectionHolder.on('click', '.evaluation-collection-remove', function(){
-            if(confirm("Êtes-vous sûr(e) de vouloir supprimer cette évaluation ?")) {
-                Syllabus.removeListElement($(this).closest('div.evaluation'));
-            }
+            $listElementToRemove = $(this).closest('div.evaluation');
+            bootbox.confirm("Confirmez-vous la suppression de cette évaluation ?", function(result){
+                Syllabus.removeListElement($listElementToRemove);
+            })
         });
 
         /**
