--- a/app/Resources/views/course/edit_equipments_course_info_tab.html.twig
+++ b/app/Resources/views/course/edit_equipments_course_info_tab.html.twig
@@ -110,20 +110,19 @@
         /**
          * Remove an equipment from collection
          */
+        var $listElementToRemove;
         equipmentsCollectionHolder.on('click', '.equipment-collection-remove', function(){
-            if(confirm("Êtes-vous sûr(e) de vouloir retirer ce matériel de la liste ?")) {
-                Syllabus.removeListElement($(this).closest('div.equipment'));
-            }
+            $listElementToRemove = $(this).closest('div.equipment');
+            bootbox.confirm("Confirmez-vous le retrait de ce matériel de la liste ?", function(result){
+                Syllabus.removeListElement($listElementToRemove);
+            })
         });
-
 
         /**
          * Form submission
          */
         $("form[name='edit_equipments_course_info']").submit(function(e){
-
             Syllabus.submitPanelForm( e, this );
-
         });
 
     </script>
